# Robotics-portfolio

./: .gitignore  LICENSE  README.md
perception/: package.xml  setup.py
perception/fire_detection/: README.md
perception/fire_detection_ros2/: README.md
perception/fire_detection_ros2/launch/: fire_detector_launch.py
perception/fire_detection_ros2/src/my_robot_controller/: fire_detector.py
