<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 Perception package for real-time fire detection using OpenCV, HSV color segmentation, and centroid tracking.</description>
  <maintainer email="ssahana0703@gmail.com">Sahana Srinivasan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <exec_depend>v4l2_camera</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
